style: NewUser.module.css
adiciona estilo para o link e para a div

--- a/front-end/src/styles/pages/NewUser.module.css
+++ b/front-end/src/styles/pages/NewUser.module.css
@@ -10,3 +10,12 @@
 .title {
   margin-bottom: 15px;
 }
+
+.linkToLogin {
+  margin-left: 10px;  
+}
+
+.contentBtnLink {
+  align-items: flex-end;
+  display: flex;
+}
